objects/Jiffle_Meeting_Session__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Days_Left__c</fullName>
        <formula>(Jiffle_Agenda_Item__r.Jiffle_Event__r.Event_End_Date__c +15)-Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <defaultValue>DATETIMEVALUE(Today()+11)</defaultValue>
        <inlineHelpText>Shown in User's Local Timezone</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>HYPERLINK('/'+ Jiffle_Agenda_Item__r.Jiffle_Event__r.Id , Jiffle_Agenda_Item__r.Jiffle_Event__r.Name , '_self')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Edit_URL__c</fullName>
        <label>External Edit URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jiffle_Agenda_Item__c</fullName>
        <label>JiffleNow Agenda Item</label>
        <referenceTo>Jiffle_Agenda_Item__c</referenceTo>
        <relationshipLabel>JiffleNow Meeting</relationshipLabel>
        <relationshipName>Jiffle_Meetings_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Jiffle_Event_End_Date__c</fullName>
        <formula>Jiffle_Agenda_Item__r.Jiffle_Event__r.Event_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jiffle Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jiffle_Event_Start_Date__c</fullName>
        <formula>Jiffle_Agenda_Item__r.Jiffle_Event__r.Event_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jiffle Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jiffle_Meeting_Location__c</fullName>
        <label>Jiffle Meeting Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jifflenow_Session_Id__c</fullName>
        <label>Jifflenow Meeting/Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Duration__c</fullName>
        <description>This field gives the duration of the meeting</description>
        <formula>(End_Date_Time__c  -  Start_Date_Time__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Duration (in Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <description>This field is to store Meeting Type of the Jiffle Meeting record</description>
        <label>Meeting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is to store the Jiffle's Unique Meeting ID</description>
        <externalId>true</externalId>
        <label>JiffleNow Meeting UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Cisco_Attendees__c</fullName>
        <description>The number of Cisco attendees that are expected to attend this engagement</description>
        <inlineHelpText>The number of Cisco attendees that are expected to attend this engagement</inlineHelpText>
        <label>Number of Cisco Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cisco_Executives__c</fullName>
        <label>Number of Cisco Executives</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Customer_Attendees__c</fullName>
        <description>The number of Customer attendees that are expected to attend this engagement.</description>
        <inlineHelpText>The number of Customer attendees that are expected to attend this engagement.</inlineHelpText>
        <label>Number of Customer Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Partner_Attendees__c</fullName>
        <label>Number of Partner Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Session_PowerOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Session(PowerOne)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>Briefing Request Status</description>
        <inlineHelpText>Current stage of a briefing request</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <defaultValue>DATETIMEVALUE(Today() + 10)</defaultValue>
        <inlineHelpText>Shown in User's Local Timezone</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Number_Attendees__c</fullName>
        <label>No. of Attendees</label>
        <summaryForeignKey>Jiffle_Attendee_Invitee__c.Jiffle_Session_Meeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>JiffleNow Meeting</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Salesforce Meeting Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JiffleNow Meeting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Jiffle_Agenda_Item__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Request_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>